# kp

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: clip.rs  keyring.rs  main.rs  pwd.rs  show.rs  stdin.rs  utils.rs
tests/: chacha_argon_keyfile_pwd_gzip.kdbx  secret
