[package]
name = "kp"
version = "0.1.0"
authors = ["paul <paul@makovi.ch>"]
edition = "2018"

[dependencies]
atty = "0.2"
clipboard = "0.5.0"
ctrlc = { version = "3.0", features = ["termination"] }
docopt = "1"
env_logger = "0.7.1"
kdbx4 = "0.4"
keyring = "0.7.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
once_cell = "1.2"
serde = "1.0"
serde_derive = "1.0"
skim = "0.6.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"] }
