[package]
name = "kp"
version = "0.1.0"
authors = ["paul <paul@makovi.ch>"]
edition = "2018"
description = "KeePass CLI"
documentation = "https://github.com/makovich/kp"
homepage = "https://github.com/makovich/kp"
repository = "https://github.com/makovich/kp"
readme = "README.md"
keywords = ["keepass", "kdbx4", "password"]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"

[badges]
travis-ci = { repository = "makovich/kp" }

[features]
default = ["clipboard"]

[dependencies]
atty = "0.2"
clipboard = { version = "0.5.0", optional = true }
ctrlc = { version = "3.0", features = ["termination"] }
docopt = "1"
env_logger = "0.7.1"
kdbx4 = "0.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
once_cell = "1.2"
serde = "1.0"
serde_derive = "1.0"
skim = "0.6.9"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "0.4.0"
